--- a/Project.toml
+++ b/Project.toml
@@ -18,17 +18,17 @@ TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-CUDA = "3"
-ChainRulesCore = "0.10, 1"
-FileIO = "1"
-JLD2 = "0.4"
-KrylovKit = "0.5"
-LineSearches = "7"
-OMEinsum = "0.4"
-Optim = "1"
-Plots = "1"
-TimerOutputs = "0.5"
-Zygote = "0.6"
+CUDA = "3.5.0"
+ChainRulesCore = "1.11.1"
+FileIO = "1.11.2"
+JLD2 = "0.4.15"
+KrylovKit = "0.5.3"
+LineSearches = "7.1.1"
+OMEinsum = "0.6.3"
+Optim = "1.5.0"
+Plots = "1.23.6"
+TimerOutputs = "0.5.13"
+Zygote = "0.6.30"
 julia = "1.6"
 
 [extras]
