--- a/Project.toml
+++ b/Project.toml
@@ -7,14 +7,19 @@ version = "0.1.0"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
-JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MKL = "33e6dc65-8f57-5167-99aa-e5a354878fb2"
 OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
-Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+OptimKit = "77e91f04-9b3b-57a6-a776-40b61faaebe0"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 TeneT = "260a78e0-cbf2-49ba-8157-48058c700f32"
+TensorKit = "07d1fe3e-3e46-537d-9eac-e9e13d0d4cec"
+TensorKitManifolds = "11fa318c-39cb-4a83-b1ed-cdc7ba1e3684"
+TensorOperations = "6aa20fa7-93e2-5fca-9bc0-fbd0db3c71a2"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
@@ -22,13 +27,10 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 CUDA = "3.5.0"
 ChainRulesCore = "1.11.1"
 FileIO = "1.11.2"
-JLD2 = "0.4.15"
 KrylovKit = "0.5.3"
 LineSearches = "7.1.1"
 OMEinsum = "0.6.3"
-Optim = "1.5.0"
 TimerOutputs = "0.5.13"
-Zygote = "0.6.30"
 julia = "1.6"
 
 [extras]
