--- a/Project.toml
+++ b/Project.toml
@@ -12,9 +12,11 @@ IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LogExpFunctions = "2ab3a3ac-af41-5b50-aa03-7779005ae688"
 MKL = "33e6dc65-8f57-5167-99aa-e5a354878fb2"
 OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
 OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 OptimKit = "77e91f04-9b3b-57a6-a776-40b61faaebe0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 TeneT = "260a78e0-cbf2-49ba-8157-48058c700f32"
