--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ KrylovKit = "0.5.3"
 LineSearches = "7.1.1"
 OMEinsum = "0.6.3"
 Optim = "1.5.0"
+Parameters = "0.12.3"
 TimerOutputs = "0.5.13"
 Zygote = "0.6.30"
 julia = "1.6"
